# vins_estimator_arm

./: README.md
vins_estimator_a53/: CMakeLists.txt
vins_estimator_a53/config/: euroc_MH01_config.yaml  euroc_MH02_config.yaml  euroc_MH03_config.yaml  euroc_MH04_config.yaml  euroc_MH05_config.yaml
vins_estimator_a53/output/: vins_result_no_loop_MH01.csv  vins_result_no_loop_MH02.csv  vins_result_no_loop_MH03.csv  vins_result_no_loop_MH04.csv  vins_result_no_loop_MH05.csv
vins_estimator_a53/src/: DatasetLoader.h  estimator.h  estimator_node.cpp  feature_manager.h  feature_tracker.cpp  feature_tracker.h
vins_estimator_a53/src/camera_model/: Camera.cc  CameraFactory.cc  EquidistantCamera.h  PinholeCamera.cc  PinholeCamera.h
vins_estimator_a53/src/factor/: imu_factor.h  marginalization_factor.cpp  projection_factor.h  projection_td_factor.cpp
vins_estimator_a53/src/initial/: initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp
vins_estimator_a53/src/utility/: utility.h
vins_estimator_a7/: CMakeLists.txt
vins_estimator_a7/config/: euroc_config.yaml
vins_estimator_a7/output/: vins_result_no_loop_MH01.csv  vins_result_no_loop_MH02.csv  vins_result_no_loop_MH03.csv  vins_result_no_loop_MH04.csv  vins_result_no_loop_MH05.csv
vins_estimator_a7/src/: DatasetLoader.h  estimator.cpp  estimator_node.cpp  feature_manager.cpp
vins_estimator_a7/src/camera_model/: Camera.h  EquidistantCamera.cc
vins_estimator_a7/src/factor/: pose_local_parameterization.h  projection_td_factor.h
vins_estimator_a7/src/initial/: initial_aligment.cpp  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
